--- a/D5.2/D5.2_progress_report.tex
+++ b/D5.2/D5.2_progress_report.tex
@@ -50,7 +50,8 @@
 		\addVersion{0.1}{5.09.2025}{I. Prusak}{Initial draft}
 		\addVersion{0.2}{9.09.2025}{G. Stanic}{Communication and Dissemination sections}
 		\addVersion{0.3}{16.09.2025}{I. Prusak}{Integration of partners' contribution}
-		\addVersion{0.4}{[Date]}{dealii-X Consortium}{Consortium revision} 
+		\addVersion{0.4}{18.09.205}{dealii-X Consortium}{Consortium revision} 
+		\addVersion{0.5}{22.09.205}{I. Prusak}{Revision adjustments} 
 		\addVersion{1.0}{[Date]}{[Author name]}{Final version}
 	\end{documentControl}
 	
