--- a/D5.2/D5.2_progress_report.tex
+++ b/D5.2/D5.2_progress_report.tex
@@ -828,7 +828,7 @@ As part of this work package, the benchmark repository is made publically availa
 
 \subsection{Progress Achieved in Year 1} %(M1–M12)
 
-\subsubsection*{CEED Backoff Problems}
+\subsubsection*{CEED Bakeoff Problems}
 
 The CEED Bakeoff Problems are a benchmark to measure the evaluation speed of the basic finite element operators (discretized bilinear forms), posed for problems on hexahedral grids, and the primary focus is on sum factorization techniques.  Both scalar and vector problems are included in the benchmarks. So far our efforts have been focused on the scalar problems. Each of the Bakeoff Problems (BP) has an associated Benchmark Kernel (BK) that evaluates a particular finite element operator and is of high arithmetic intensity.  The efficient implementation of these kernels is paramount to obtaining good performance.
 
